cluster/apps/smart-home/mosquitto/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mosquitto
  labels:
    app.kubernetes.io/name: mosquitto
  annotations:
    ignore-check.kube-linter.io/no-read-only-root-fs: "Unsupported for this app."
spec:
  replicas: 1
  serviceName: mqtt
  selector:
    matchLabels:
      app.kubernetes.io/name: mosquitto
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mosquitto
    spec:
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        runAsUser: 101883
        runAsGroup: 101883
        fsGroup: 101883
      containers:
        - name: mosquitto
          image: docker.io/eclipse-mosquitto:2.0.18
          imagePullPolicy: IfNotPresent
          ports:
            - name: mosquitto-http
              containerPort: 1883
              protocol: TCP
          volumeMounts:
            - name: mosquitto-config
              mountPath: /mosquitto/config
            - name: mosquitto-data
              mountPath: /data
            - name: mosquitto-secrets
              mountPath: /secrets
          resources:
            limits:
              cpu: 2000m
              memory: 500Mi
            requests:
              cpu: 500m
              memory: 500Mi
          livenessProbe:
            tcpSocket:
              port: 1883
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          securityContext:
            runAsNonRoot: true
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
      volumes:
        - name: mosquitto-config
          configMap:
            name: mosquitto-config
        - name: mosquitto-data
          emptyDir:
            sizeLimit: 8Mi
        - name: mosquitto-secrets
          secret:
            secretName: mosquitto-secrets
